feat(api): view news
