# docs/swagger.yaml
@@ -4,7 +4,37 @@ info:
   title: Durian Covid-19 Golang Backend
   version: "1.0"
 paths:
-  /portal/del_sub:
+  /news/detail:
+    post:
+      description: 查看单条新闻
+      parameters:
+      - description: 新闻ID
+        in: formData
+        name: news_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"success":true, "message":"查询成功","data":"该条新闻的详细信息"}'
+          schema:
+            type: string
+        "404":
+          description: '{"success":true, "message":"查询失败，新闻ID不存在"}'
+          schema:
+            type: string
+      tags:
+      - 新闻
+  /news/list_all_news:
+    get:
+      description: 获取所有新闻，返回列表
+      responses:
+        "200":
+          description: '{"success":true, "message":"查询成功","data":"所有新闻""}'
+          schema:
+            type: string
+      tags:
+      - 新闻
+  /sub/del_sub:
     post:
       description: 删除订阅
       parameters:
@@ -27,8 +57,8 @@ paths:
           schema:
             type: string
       tags:
-      - user
-  /portal/list_all_subs:
+      - 订阅
+  /sub/list_all_subs:
     post:
       description: 获取订阅列表
       parameters:
@@ -47,8 +77,8 @@ paths:
           schema:
             type: string
       tags:
-      - user
-  /portal/sub:
+      - 订阅
+  /sub/subscribe:
     post:
       description: 订阅城市疫情信息
       parameters:
@@ -76,7 +106,7 @@ paths:
           schema:
             type: string
       tags:
-      - user
+      - 订阅
   /user/info:
     post:
       description: 查看用户个人信息
@@ -96,7 +126,7 @@ paths:
           schema:
             type: string
       tags:
-      - user
+      - 用户
   /user/login:
     post:
       description: 登录
@@ -125,7 +155,7 @@ paths:
           schema:
             type: string
       tags:
-      - user
+      - 用户
   /user/modify:
     post:
       description: 修改用户信息（支持修改用户名和密码）
@@ -164,7 +194,7 @@ paths:
           schema:
             type: string
       tags:
-      - user
+      - 用户
   /user/register:
     post:
       description: 注册
@@ -199,7 +229,7 @@ paths:
           schema:
             type: string
       tags:
-      - user
+      - 用户
 schemes:
 - http
 - https
